添加缩略图

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <link rel="stylesheet" href="css/swipebox.css">
 <!--//Custom Theme files-->
 <!--js-->
-<script src="js/jquery-1.11.1.min.js"></script> 
+<!-- <script src="js/jquery-1.11.1.min.js"></script>  -->
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <!-- //js -->
 <!--web-fonts-->
 <link href='https://fonts.googleapis.com/css?family=Overlock:400,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
@@ -380,12 +381,12 @@
 			<h3 class="title">大刀长矛</h3>
 			<div class="skills-info">
 				<div class="col-md-6 bar-grids">
-					<h6>HTML/JS/CSS/HTML5和CSS3动画实现/XML/DOM/AJAX/Json/RegExp/DIV+CSS布局等<span> 85% </span></h6>
+					<h6>HTML/JS/CSS/HTML5和CSS3动画实现/DIV+CSS布局等<span> 85% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 85%">
 						</div>
 					</div>
-					<h6>XML(XSL、DTD)/DOM/AJAX/Json/RegExp等<span> 80% </span></h6>
+					<h6>XML(XSL、SVG、DTD)/DOM/AJAX/Json/RegExp等<span> 80% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
 						</div>
@@ -409,7 +410,7 @@
 						<div class="progress-bar progress-bar-striped active" style="width: 85%">
 						</div>
 					</div>
-					<h6>/Sublime/Notepad++/HBuilder/Git/Webback/Photoshop/会声会影<span>75% </span></h6>
+					<h6>Sublime/Notepad++/HBuilder/Git/Webback/Photoshop/会声会影<span>75% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 75%">
 						</div>
@@ -451,7 +452,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g1.jpg" class="swipebox" title="Nothing is given, Everything is earned！">
-											<img src="images/g1.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g1.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>最爱<span> 篮球</span></h3>
 												<p>Nothing is given, Everything is earned！</p>
@@ -462,7 +463,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid effect-sarah">
 										<a href="images/g2.jpg" class="swipebox" title="北京·天安门">
-											<img src="images/g2.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g2.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>在路上<span> 天安门</span></h3>
 												<p>北京·天安门</p>
@@ -473,7 +474,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g3.jpg" class="swipebox" title="Some of life,you have to go to the great challenges。">
-											<img src="images/g3.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g3.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>最爱<span> 篮球</span></h3>
 												<p>Some of life,you have to go to the great challenges。</p>
@@ -484,7 +485,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g4.jpg" class="swipebox" title="百里杜鹃">
-											<img src="images/g4.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g4.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>在路上<span> 杜鹃</span></h3>
 												<p>百里杜鹃</p>
@@ -495,7 +496,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g5.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g5.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g5.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>My<span> 项目5</span></h3>
 												<p>Sarah likes to watch clouds. She's quite depressed.</p>
@@ -506,7 +507,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g6.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g6.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g6.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>My<span> 项目6</span></h3>
 												<p>Sarah likes to watch clouds. She's quite depressed.</p>
@@ -517,7 +518,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g7.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g7.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g7.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>My<span> 项目7</span></h3>
 												<p>Sarah likes to watch clouds. She's quite depressed.</p>
@@ -528,7 +529,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g8.jpg" class="swipebox" title="空中看中国">
-											<img src="images/g8.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g8.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>在路上<span> 空中</span></h3>
 												<p>空中看中国</p>
@@ -539,7 +540,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g9.jpg" class="swipebox" title="羽毛球如人生。羽球有输有赢，人生有高有低，而我们所追求的，是健康与快乐。">
-											<img src="images/g9.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g9.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>最爱<span> 羽毛球</span></h3>
 												<p>羽毛球如人生。羽球有输有赢，人生有高有低，而我们所追求的，是健康与快乐。</p>
@@ -552,7 +553,7 @@
 									<div class="grid">
 										<a href="images/g10.jpg" class="swipebox" title="生能有几回搏，此时不搏何时博。——容国团<br>
 												努力了不一定会成功，但不努力一定会失败。——孔令辉">
-											<img src="images/g10.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g10.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>最爱<span> 乒乓球</span></h3>
 												<p>生能有几回搏，此时不搏何时博。——容国团<br>
@@ -565,7 +566,7 @@
 									<div class="grid">
 										<a href="images/g11.jpg" class="swipebox" title="河界三分阔，智谋万丈深。<br>
 												没有了仕相，再帅也不过是个逃犯。">
-											<img src="images/g11.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g11.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>最爱<span> 象棋五子棋</span></h3>
 												<p>河界三分阔，智谋万丈深。<br>
@@ -577,7 +578,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g12.jpg" class="swipebox" title="每一个还没去过西藏的人，都深信有一天会踏上那片土地；每一个离开的人，都深信自己还会回去。">
-											<img src="images/g12.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g12.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>最爱<span> 骑行</span></h3>
 												<p>每一个还没去过西藏的人，都深信有一天会踏上那片土地；每一个离开的人，都深信自己还会回去。 </p>
@@ -598,7 +599,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g5.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g5.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g5.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>My<span> 项目5</span></h3>
 												<p>Sarah likes to watch clouds. She's quite depressed.</p>
@@ -609,7 +610,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g6.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g6.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g6.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>My<span> 项目6</span></h3>
 												<p>Sarah likes to watch clouds. She's quite depressed.</p>
@@ -620,7 +621,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g7.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
-											<img src="images/g7.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g7.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>My<span> 项目7</span></h3>
 												<p>Sarah likes to watch clouds. She's quite depressed.</p>
@@ -638,7 +639,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g3.jpg" class="swipebox" title="Some of life,you have to go to the great challenges。">
-											<img src="images/g3.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g3.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>最爱<span> 篮球</span></h3>
 												<p>Some of life,you have to go to the great challenges。</p>
@@ -649,7 +650,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g1.jpg" class="swipebox" title="Nothing is given, Everything is earned！">
-											<img src="images/g1.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g1.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>最爱<span> 篮球</span></h3>
 												<p>Nothing is given, Everything is earned！</p>
@@ -660,7 +661,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g9.jpg" class="swipebox" title="羽毛球如人生。羽球有输有赢，人生有高有低，而我们所追求的，是健康与快乐。">
-											<img src="images/g9.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g9.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>最爱<span> 羽毛球</span></h3>
 												<p>羽毛球如人生。羽球有输有赢，人生有高有低，而我们所追求的，是健康与快乐。</p>
@@ -672,7 +673,7 @@
 									<div class="grid">
 										<a href="images/g10.jpg" class="swipebox" title="生能有几回搏，此时不搏何时博。——容国团<br>
 												努力了不一定会成功，但不努力一定会失败。——孔令辉">
-											<img src="images/g10.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g10.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>最爱<span> 乒乓球</span></h3>
 												<p>生能有几回搏，此时不搏何时博。——容国团<br>
@@ -685,7 +686,7 @@
 									<div class="grid">
 										<a href="images/g11.jpg" class="swipebox" title="河界三分阔，智谋万丈深。<br>
 												没有了仕相，再帅也不过是个逃犯。">
-											<img src="images/g11.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g11.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>最爱<span> 象棋五子棋</span></h3>
 												<p>河界三分阔，智谋万丈深。<br>
@@ -697,7 +698,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g12.jpg" class="swipebox" title="每一个还没去过西藏的人，都深信有一天会踏上那片土地；每一个离开的人，都深信自己还会回去。">
-											<img src="images/g12.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g12.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>最爱<span> 骑行</span></h3>
 												<p>每一个还没去过西藏的人，都深信有一天会踏上那片土地；每一个离开的人，都深信自己还会回去。 </p>
@@ -715,7 +716,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g2.jpg" class="swipebox" title="北京·天安门">
-											<img src="images/g2.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g2.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>在路上<span> 天安门</span></h3>
 												<p>北京·天安门</p>
@@ -726,7 +727,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g4.jpg" class="swipebox" title="百里杜鹃">
-											<img src="images/g4.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g4.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>在路上<span> 杜鹃</span></h3>
 												<p>百里杜鹃</p>
@@ -737,7 +738,7 @@
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g8.jpg" class="swipebox" title="空中看中国">
-											<img src="images/g8.jpg" alt="" class="img-responsive" />
+											<img src="images/thumbnail/g8.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>在路上<span> 空中</span></h3>
 												<p>空中看中国</p>
