添加两个项目

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<li>
 							<ul class="address-text">
 								<li><b>邮&nbsp;&nbsp;箱&nbsp;： </b></li>
-								<li><a href="mailto:example@mail.com"> 1774370503@qq.com</a></li>
+								<li><a href="mailto:cheney_nuaa@foxmail.com"> cheney_nuaa@foxmail.com</a><!-- <a href="javascript:void(0);" onclick="window.clipboardData" title="复制邮箱">&nbsp;<img src="./images/copy.gif" alt="复制邮箱"></a> --></li>
 							</ul>
 						</li>
 						<li>
@@ -439,7 +439,7 @@
 				<div id="horizontalTab" style="display: block; width: 100%; margin: 0px;">
 					<ul class="resp-tabs-list wow fadeInUp animated" data-wow-delay=".7s">
 						<li class="resp-tab-item"><span>一览无余</span></li>
-						<li class="resp-tab-item"><span>码来码去</span></li>
+						<li class="resp-tab-item"><span>亦猿亦码</span></li>
 						<li class="resp-tab-item"><span>兴趣爱好</span></li>
 						<li class="resp-tab-item"><span>天下风光 </span></li>
 											
@@ -498,30 +498,30 @@
 										<a href="https://king-hcj.github.io/myFirstProject/" target="_blank">
 											<img src="images/thumbnail/g5.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>my<span> firstProject</span></h3>
-												<p>我的第一个前端项目，发生在大四，此处省略一千字……</p>
+												<h3>我的<span> 第一个项目</span></h3>
+												<p>我的第一个前端项目——冲突敏感性分析系统（前端结合MATLAB），发生在大四，此处省略一千字……</p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g6.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="https://king-hcj.github.io/government/" target="_blank">
 											<img src="images/thumbnail/g6.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> 项目6</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
+												<h3>项目<span> 政府代建单位绩效考评系统</span></h3>
+												<p>系统结合政府投资项目代建制特点及项目管理特点,遵循指标设置的基本原则构建的系统体系,引入层次分析法(AHP)、模糊综合评价法(FUZZY)以及数据包络法(DEA)相结合的AFD综合评价模型。</p>
 											</div>
 										</a>	
 									</div>
 								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="images/g7.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+										<a href="https://king-hcj.github.io/loveLetter/" target="_blank">
 											<img src="images/thumbnail/g7.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3>My<span> 项目7</span></h3>
-												<p>Sarah likes to watch clouds. She's quite depressed.</p>
+												<h3>项目<span> LoveLetter</span></h3>
+												<p>LoveLetter——时光清浅，许我╭❤～你。</p>
 											</div>
 										</a>	
 									</div>
@@ -593,7 +593,7 @@
 
 						<!-- 这是一个假的筛选，代码和上面一样，看起来像是通过按钮、jQuery等实现==================================== -->
 
-						<!-- 码来码去，开始 -->
+						<!-- 亦猿亦码，开始 -->
 						<div class="tab-1 resp-tab-content">
 							<div class="tab_img">
 								<div class="col-md-4 portfolio-grids">
@@ -632,7 +632,7 @@
 								<div class="clearfix"> </div>
 							</div>
 						</div>
-						<!-- //码来码去，结束 -->
+						<!-- //亦猿亦码，结束 -->
 						<!-- 兴趣爱好，开始 -->
 						<div class="tab-1 resp-tab-content">
 							<div class="tab_img">
