--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <link rel="stylesheet" type="text/css" href="css/accordion.css"><!-- 个人简介->手风琴 -->
 <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
-<link rel="preload" href="css/style.css" as="style" type="text/css" media="all">
+<link href="css/style.css" type="text/css" media="all">
 <link rel="stylesheet" href="css/swipebox.css">
 <!--//Custom Theme files-->
 <!--js-->
