复制提醒、文本结构与内容等优化

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 							    var clipboard = new Clipboard('.btn');
 
 							    clipboard.on('success', function(e) {
-							        console.log(e);
+							        // console.log(e);
+							        alert("邮箱复制成功！")
 							    });
 
 							    clipboard.on('error', function(e) {
@@ -228,8 +229,8 @@
 					5.农村长大，吃苦耐劳。</p>
 					<p>
 					二、不足<br>
-					1.知识面广，但前端领域尚无实实在在的企业工作经历；<br>
-					2.知识庞杂，没有系统的前端知识体系。
+					1.前端领域企业经验较少，但有过移动APP 开发（HBuilder 云端打包）、冲突敏感性分析系统（web+MATLAB GUI）、政府代建单位绩效考评系统、基于web 的XX 飞机交互式电子技术手册等的开发、设计经验；<br>
+					2.知识庞杂，前端知识体系不够系统，但知识面广，勤奋乐学。
 					</p>
 			</dd>
 			<dt>
@@ -283,11 +284,12 @@
 				<div class="col-md-6 work-right"> 
 					<h5><span class="glyphicon glyphicon-briefcase"> </span> 贵州贵航飞机设计研究所·飞机设计员</h5>
 					<p><span style="font-size: 20px">单位简介：</span>
-						<hr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<hr>&nbsp;&nbsp;&nbsp;&nbsp;
 					贵州贵航飞机设计研究所成立于1968年，现隶属于大型国有军工制造企业中航贵州飞机有限责任公司，是以设计歼击机、高级教练机、通用飞机、无人机等产品的综合性科研单位。建所近五十年，经过长期不懈努力，先后研制、开发了十余种机型，贵航所目前承担了空、海军部分重大项目及外贸项目。</p><br>
 					<p><span style="font-size: 20px">工作内容及贡献：</span>
 						<hr>
 					<ol>
+						<li>中国航空工业集团·航空装备技术资料整改实施方案专家组成员(贵飞公司代表)。</li>
 					    <li>负责贵航所市科技项目基于web的XX飞机交互式电子技术手册（IETM）的方案分析、项目策划、申报和技术设计等工作；旨在通过web、数据库、人工智能、物联网等技术实现飞机用户技术资料的智能化管理，推动飞机用户技术资料的便捷使用和维护管理工作，提高信息利用率，最大程度的发挥信息的价值。<br>
 					    涉及技能：软件工程、HTML/CSS/JavaScript、XML（XSL、DTD）、数据结构与算法等。	
 					    </li>
@@ -318,10 +320,11 @@
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-right work-right2"> 
-					<h4>2012.9 - 2016.7 </h4>
+					<h4>2013.07至今 </h4>
 				</div>
 				<div class="col-md-6 work-left work-left2"> 
-					<h5> 暑期兼职·大学 <span class="glyphicon glyphicon-briefcase"> </span></h5>
+					<h5> 暑期兼职·业余 <span class="glyphicon glyphicon-briefcase"> </span></h5>
+					<p>行天下·数理化教育(创业)、爱上学教育·语数理化</p><hr>
 					<p>江苏众兰投资管理有限公司·客户经理</p><hr>
 					<p>昆山市金谷农庄科技发展有限公司·餐饮服务</p><hr>
 					<p>太平人寿保险有限公司江苏分公司·中国太平-中石化驻点专员</p>
@@ -346,24 +349,25 @@
 					<p>专业介绍：<a href="http://www.bangboer.net/gk/zy183" target="_blank"  rel="nofollow">信息与计算科学</a>
 						<dl>
 						    <dt>专业简介：</dt>
-						    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;以信息领域为背景，<b>数学</b>与<b>计算机</b>信息管理相结合的<b>计算机科学与技术类专业</b>；具有<b>扎实的数学基础</b>，掌握信息科学和计算机科学的基本理论和基本知识；具有基本的<b>算法分析</b>、<b>设计能力</b>和<b>较强的编程能力</b>；具有一定的<b>科学研究和软件开发能力</b>。</dd>
+						    <dd>&nbsp;&nbsp;&nbsp;&nbsp;以信息领域为背景，<b>数学</b>与<b>计算机</b>信息管理相结合的<b>计算机科学与技术类专业</b>；具有<b>扎实的数学基础</b>，掌握信息科学和计算机科学的基本理论和基本知识；具有基本的<b>算法分析</b>、<b>设计能力</b>和<b>较强的编程能力</b>；具有一定的<b>科学研究和软件开发能力</b>。</dd>
 						</dl>
 						<dl>
 						    <dt>主干学科：</dt>
-						    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;计算机科学技术{<b>C/C++</b>、
+						    <dd>&nbsp;&nbsp;&nbsp;&nbsp;计算机科学技术{<b>C/C++</b>、
 						    	<b>算法与数据结构</b>、<b>软件工程</b>模型与方法、<b>计算机网络、操作系统</b>等}；数学{<b>微分方程数值解法</b>、数值代数、数值逼近与计算几何、<b>数学分析</b>、<b>概率论</b>等} </dd>
 						</dl>
 					</p>
 					<hr>
 					<p><dl>
 						    	<dt>校园活动：</dt>
-						    	<dd>南航大校团委《南航青年报》&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;副主编、撰稿人、版面设计<br>
-						    	南航华为花粉俱乐部&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;宣传部部长、优秀调研团队<br>
-								南航大外国语学院模拟联合国大会&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会记者<br>
-								南京航空航天大学就业指导服务中心&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;就业指导服务中心助理<br>
-								物联网科技实践创业团队-校级立项&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;暑期实践
+						    	<dd>◆南航大校团委《南航青年报》<span style="font-size:25px;color: red">☞</span> 副主编、撰稿人、版面设计<br>
+						    	◇南航大新闻中心<span style="font-size:25px;color: cyan">☞</span>《一分钟航天》视频设计、制作<br>
+						    	◆南航华为花粉俱乐部<span style="font-size:25px;color: orange">☞</span>宣传部部长、优秀调研团队<br>
+								◇南航大外国语学院模拟联合国大会<span style="font-size:25px;color: yellow">☞</span>大会记者<br>
+								◆南京航空航天大学就业指导服务中心<span style="font-size:25px;color: blue">☞</span>就业指导服务中心助理<br>
+								◇物联网科技实践创业团队-校级立项<span style="font-size:25px;color: green">☞</span>暑期实践
 						    </dd>
-						    <dt>较强的学习能力和探索意识，曾自学5天获会计从业资格证；一个月获证券从业资格证。</dt>
+						    <dt>◆较强的学习能力和探索意识，曾自学5天获会计从业资格证；一个月获证券从业资格证。</dt>
 						</dl> 
 					</p>
 				</div>
@@ -374,14 +378,31 @@
 					<h4>自学 2015.9-至今</h4>
 				</div>
 				<div class="col-md-6 work-left work-left2"> 
-					<h5> web前端开发技能 <span class="glyphicon glyphicon-education"></span></h5>
+					<h5> web前端修炼 <span class="glyphicon glyphicon-education"></span></h5>
 					<p><ol>
-
-
-
-					    <li>前端技能：掌握web前端技术；熟悉HTML5和CSS3动画实现，熟练使用DIV+CSS布局；熟悉jQuery/Bootstrap/Angular等开源库和框架；熟练使用PS、Sublime/Git；熟悉SQL、软件测试；</li>
-					    <li>有H5 APP开发、前端系统构建经历，曾使用MATLAB GUI开发系统；了解MV*/Java/Python/PHP/ MySQL/React；熟练Excel及VBA编程、数据透视、函数。</li>
-					    <li>独立完成FreeCodeCamp 95%挑战；W3Cschool经验榜第二；活跃于GitHub、SegmentFault、掘金社区等.</li>
+					    <li align="left"><b>前端技能：</b><ul>
+					        <li>掌握web前端相关技能；掌握C/C++、数据结构、算法、计算机网络等；</li>
+					        <li>熟悉HTML5和CSS3动画实现，熟练使用DIV+CSS布局；</li>
+					        <li>熟悉jQuery/Bootstrap/Angular等开源库和框架；</li>
+					        <li>熟练使用Photoshop/Sublime/Git等；</li>
+					        <li>熟悉SQL、软件测试、软件工程等理论；</li>
+					        <li>了解MV*/Java/Python/PHP/ MySQL/Vue/小程序。</li>
+					    </ul></li>
+					    <li align="left"><b>成长路径：</b><ul>
+					    	<li>《JavaScript DOM编程艺术》、《JavaScript高级程序设计》、前端微信公众号、博客、京东微信阅读等；</li>
+					        <li>独立完成FreeCodeCamp 95%挑战；W3Cschool经验榜第二；</li>
+					        <li>活跃于GitHub、SegmentFault、掘金社区等;</li>
+					        <li>imooc、51CTO、网易云、腾讯课堂等；</li>
+					        <li>设计、规划、完成个人项目，学以致用。</li>
+					    </ul></li>
+					    <li align="left"><b>相关实践：</b>
+					    	<ul>
+					        <li>基于web 的XX 飞机交互式电子技术手册；</li>
+					        <li>移动APP 开发（HBuilder 云端打包）；</li>
+					        <li>政府代建单位绩效考评系统；</li>
+					        <li>冲突敏感性分析系统（Web+MATLAB GUI）等。</li>
+					    	</ul>
+						</li>
 					</ol></p>
 				</div>
 				<div class="clearfix"> </div>
@@ -405,7 +426,7 @@
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
 						</div>
 					</div>
-					<h6>C/C++/SQL/算法/数据结构/计算机网络<span>85% </span></h6>
+					<h6>C/C++/SQL/算法/数据结构/计算机网络/软件工程/软件测试<span>85% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 85%">
 						</div>
@@ -424,17 +445,17 @@
 						<div class="progress-bar progress-bar-striped active" style="width: 85%">
 						</div>
 					</div>
-					<h6>Sublime/Notepad++/HBuilder/Git/Webback/Photoshop/会声会影<span>75% </span></h6>
+					<h6>Sublime/Photoshop/Notepad++/HBuilder/Git/Webback等<span>75% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 75%">
 						</div>
 					</div>
-					<h6>Angular/node/Vue <span> 55% </span></h6>
+					<h6>Angular/node/Vue/ES6/SEO/web安全/小程序 <span> 55% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 55%">
 						</div>
 					</div>
-					<h6>MV* /Java/Python/PHP/MySQL/Linux/软件测试<span> 45% </span></h6>
+					<h6>MV* /Java/Python/PHP/MySQL/Linux<span> 45% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 45%">
 						</div>
@@ -513,7 +534,7 @@
 											<img src="images/thumbnail/g5.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
 												<h3>我的<span> 第一个项目</span></h3>
-												<p>我的第一个前端项目——冲突敏感性分析系统（前端结合MATLAB），发生在大四，此处省略一千字……</p>
+												<p>我的第一个前端项目——冲突敏感性分析系统（WEB+MATLAB），发生在大四，此处省略一千字……</p>
 											</div>
 										</a>	
 									</div>
