增加航空工业荣誉

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
 					<li><span class="glyphicon glyphicon-menu-right"></span> 《南航青年报》副主编</li>
 					<li><span class="glyphicon glyphicon-menu-right"></span> 证券从业资格证;会计从业资格证</li>
 					<li><span class="glyphicon glyphicon-menu-right"></span> 飞机设计员；助理工程师 </li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> 中国航空工业集团·航空装备技术资料整改实施方案&nbsp;&nbsp;专家组成员(贵飞公司代表) </li>
 					<li><span class="glyphicon glyphicon-menu-right"></span> 贵飞公司象棋大赛-冠军<br/>&nbsp;&nbsp;&nbsp;&nbsp;贵飞公司五子棋大赛-三等奖<br/>&nbsp;&nbsp;&nbsp;&nbsp;贵航所篮球赛-亚军 </li>
 				</ul>
 				<div class="clearfix"> </div>
