--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 			<dd class="accordion-content accordionItem is-collapsed" id="accordion5" aria-hidden="true">
 				<p>您要找的人，为什么是我？ <br>
 					1.懂算法、懂数据、懂业务，懂实现；<br>
-					2.大学课程计算机和数学；懂C/C++、算法与数据结构、软件工程、计算机网络、操作系统、思维逻辑，又热衷于HTML/JS/CSS/XML/AJAX/jQuery/Bootstrap/Angular等的前端er；<br>
+					2.大学课程计算机和数学；懂C/C++、算法与数据结构、软件工程、计算机网络、操作系统、思维逻辑，又热衷于HTML/JS/CSS/XML/AJAX/jQuery/Bootstrap/Vue等的前端er；<br>
 					3.懂概率论与数理统计、懂SQL、精通Excel的数据分析师；<br>
 					4.脚踏实地，谦虚谨慎，对工作一丝不苟的老实人；<br>
 					5.爱好广泛、亲近生活，实在而不失风趣的活力派。</p>
@@ -384,10 +384,10 @@
 					    <li align="left"><b>前端技能：</b><ul>
 					        <li>掌握web前端相关技能；掌握C/C++、数据结构、算法、计算机网络等；</li>
 					        <li>熟悉HTML5和CSS3动画实现，熟练使用DIV+CSS布局；</li>
-					        <li>熟悉jQuery/Bootstrap/Angular等开源库和框架；</li>
+					        <li>熟悉jQuery/Vue/Bootstrap等开源库和框架；</li>
 					        <li>熟练使用Photoshop/Sublime/Git等；</li>
 					        <li>熟悉SQL、软件测试、软件工程等理论；</li>
-					        <li>了解MV*/Java/Python/PHP/ MySQL/Vue/小程序。</li>
+					        <li>了解MV*/Java/Python/PHP/ MySQL/Angular/小程序。</li>
 					    </ul></li>
 					    <li align="left"><b>成长路径：</b><ul>
 					    	<li>《JavaScript DOM编程艺术》、《JavaScript高级程序设计》、前端微信公众号、博客、京东微信阅读等；</li>
@@ -432,7 +432,7 @@
 						<div class="progress-bar progress-bar-striped active" style="width: 85%">
 						</div>
 					</div>
-					<h6>jQuery/Bootstrap <span> 80% </span></h6>
+					<h6>jQuery/Bootstrap/Vue <span> 80% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
 						</div>
@@ -451,7 +451,7 @@
 						<div class="progress-bar progress-bar-striped active" style="width: 75%">
 						</div>
 					</div>
-					<h6>Angular/node/Vue/ES6/SEO/web安全/小程序 <span> 55% </span></h6>
+					<h6>Angular/node/ES6/SEO/web安全/小程序 <span> 55% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 55%">
 						</div>
