--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <link rel="stylesheet" href="css/swipebox.css">
 <!--//Custom Theme files-->
 <!--js-->
-<!-- <script src="js/jquery-1.11.1.min.js"></script>  -->
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="js/jquery-1.11.1.min.js"></script> 
+<!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script> -->
 <!-- //js -->
 <!--web-fonts-->
 <link href='https://fonts.googleapis.com/css?family=Overlock:400,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
