--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 										</a>	
 									</div>
 								</div>
-								<!-- <div class="col-md-4 portfolio-grids">
+								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g4.jpg" class="swipebox" title="百里杜鹃">
 											<img src="images/thumbnail/g4.jpg" alt="" class="img-responsive" />
@@ -528,7 +528,7 @@
 											</div>
 										</a>	
 									</div>
-								</div> -->
+								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="https://king-hcj.github.io/myFirstProject/" target="_blank">
@@ -551,7 +551,7 @@
 										</a>	
 									</div>
 								</div>
-								<!-- <div class="col-md-4 portfolio-grids">
+								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="https://king-hcj.github.io/loveLetter/" target="_blank">
 											<img src="images/thumbnail/g7.jpg" alt="" class="img-responsive" />
@@ -561,7 +561,7 @@
 											</div>
 										</a>	
 									</div>
-								</div> -->
+								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g8.jpg" class="swipebox" title="空中看中国">
@@ -654,7 +654,7 @@
 										</a>	
 									</div>
 								</div>
-								<!-- <div class="col-md-4 portfolio-grids">
+								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g7.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
 											<img src="images/thumbnail/g7.jpg" alt="" class="img-responsive" />
@@ -664,7 +664,7 @@
 											</div>
 										</a>	
 									</div>
-								</div> -->
+								</div>
 								<div class="clearfix"> </div>
 							</div>
 						</div>
@@ -760,7 +760,7 @@
 										</a>	
 									</div>
 								</div>
-								<!-- <div class="col-md-4 portfolio-grids">
+								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g4.jpg" class="swipebox" title="百里杜鹃">
 											<img src="images/thumbnail/g4.jpg" alt="" class="img-responsive" />
@@ -770,7 +770,7 @@
 											</div>
 										</a>	
 									</div>
-								</div> -->
+								</div>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="images/g8.jpg" class="swipebox" title="空中看中国">
